Optimisation des images

--- a/index.html
+++ b/index.html
@@ -9,10 +9,7 @@
 			content="Vous souhaitez passer des vacances inoubliables, mais vous avez du mal à trouver un hébergement ? Avec Booki, simplifiez-vous la vie ! Profitez de notre moteur de recherche et trouvez le logement qui vous correspond, partout en France."
 		/>
 		<link rel="stylesheet" href="css/normalize.css" />
-		<link
-			rel="stylesheet"
-			href="https://fonts.googleapis.com/css?family=Raleway&display=swap"
-		/>
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway&display=swap" />
 		<link
 			rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
@@ -23,76 +20,37 @@
 		<!-- 1200px et plus -->
 		<link rel="stylesheet" href="css/style.css" />
 		<!-- 320px à 479px -->
-		<link
-			rel="stylesheet"
-			media="screen and (min-width: 320px) and (max-width: 479px)"
-			href="css/smartphone-small.css"
-		/>
+		<link rel="stylesheet" media="screen and (min-width: 320px) and (max-width: 479px)" href="css/smartphone-small.css" />
 		<!-- 480px à 577px -->
-		<link
-			rel="stylesheet"
-			media="screen and (min-width: 480px) and (max-width: 577px)"
-			href="css/smartphone-medium.css"
-		/>
+		<link rel="stylesheet" media="screen and (min-width: 480px) and (max-width: 577px)" href="css/smartphone-medium.css" />
 		<!-- 578px à 767px -->
-		<link
-			rel="stylesheet"
-			media="screen and (min-width: 578px) and (max-width: 767px)"
-			href="css/smartphone-large.css"
-		/>
+		<link rel="stylesheet" media="screen and (min-width: 578px) and (max-width: 767px)" href="css/smartphone-large.css" />
 		<!-- 768px à 899px -->
-		<link
-			rel="stylesheet"
-			media="screen and (min-width: 768px) and (max-width: 899px)"
-			href="css/tablet-small.css"
-		/>
+		<link rel="stylesheet" media="screen and (min-width: 768px) and (max-width: 899px)" href="css/tablet-small.css" />
 		<!-- 900px à 991px -->
-		<link
-			rel="stylesheet"
-			media="screen and (min-width: 900px) and (max-width: 991px)"
-			href="css/tablet-large.css"
-		/>
+		<link rel="stylesheet" media="screen and (min-width: 900px) and (max-width: 991px)" href="css/tablet-large.css" />
 		<!-- 992px à 1199px -->
-		<link
-			rel="stylesheet"
-			media="screen and (min-width: 992px) and (max-width: 1199px)"
-			href="css/laptop.css"
-		/>
+		<link rel="stylesheet" media="screen and (min-width: 992px) and (max-width: 1199px)" href="css/laptop.css" />
 		<title>Booki</title>
 		<!-- Twitter Card -->
 		<meta name="twitter:card" content="summary_large_image" />
 		<meta name="twitter:site" content="@booki" />
 		<meta name="twitter:title" content="Booki" />
-		<meta
-			name="twitter:description"
-			content="Trouvez votre hébergement pour des vacances de rêve"
-		/>
-		<meta
-			name="twitter:image"
-			content="https://neutron35.github.io/Prototype-Booki/images/logo/Booki.png"
-		/>
+		<meta name="twitter:description" content="Trouvez votre hébergement pour des vacances de rêve" />
+		<meta name="twitter:image" content="https://neutron35.github.io/Prototype-Booki/images/logo/Booki.png" />
 		<!-- Open Graph -->
 		<meta property="og:type" content="article" />
 		<meta property="og:title" content="Booki" />
-		<meta
-			property="og:description"
-			content="Trouvez votre hébergement pour des vacances de rêve"
-		/>
-		<meta
-			property="og:url"
-			content="https://neutron35.github.io/Prototype-Booki/"
-		/>
-		<meta
-			property="og:image"
-			content="https://neutron35.github.io/Prototype-Booki/images/logo/Booki.png"
-		/>
+		<meta property="og:description" content="Trouvez votre hébergement pour des vacances de rêve" />
+		<meta property="og:url" content="https://neutron35.github.io/Prototype-Booki/" />
+		<meta property="og:image" content="https://neutron35.github.io/Prototype-Booki/images/logo/Booki.png" />
 	</head>
 
 	<body>
 		<!-- Corps de la page -->
 		<header>
 			<!-- Header -->
-			<img src="images/logo/Booki.png" alt="Logo Booki" />
+			<img src="images/logo/Booki.webp" alt="Logo Booki" />
 			<nav>
 				<!-- On place une liste dans la nav -->
 				<ul>
@@ -108,18 +66,8 @@
 				<form class="search-bar">
 					<!-- Barre de recherche -->
 					<i class="fa-solid fa-location-dot fa-1x"></i>
-					<input
-						type="text"
-						class="search"
-						name="search"
-						aria-label="Champ de recherche"
-						value="Marseille, France"
-					/>
-					<button
-						class="search-button"
-						type="submit"
-						aria-label="Rechercher"
-					></button>
+					<input type="text" class="search" name="search" aria-label="Champ de recherche" value="Marseille, France" />
+					<button class="search-button" type="submit" aria-label="Rechercher"></button>
 				</form>
 				<div class="filters-list">
 					<!-- Liste des filtres -->
@@ -154,11 +102,7 @@
 					<div class="lodging-list">
 						<a href="#">
 							<figure class="lodging">
-								<img
-									class="lodging-image"
-									src="images/hebergements/4_small/auberge-la-cannebiere.jpg"
-									alt="Auberge La Cannebière à Marseille"
-								/>
+								<img class="lodging-image" src="images/hebergements/auberge-la-cannebiere.webp" alt="Auberge La Cannebière à Marseille" />
 								<figcaption>
 									<h3>Auberge La Cannebière</h3>
 									<p class="price">
@@ -176,11 +120,7 @@
 						</a>
 						<a href="#">
 							<figure class="lodging">
-								<img
-									class="lodging-image"
-									src="images/hebergements/4_small/hotel-du-port.jpg"
-									alt="Hôtel du port à Marseille"
-								/>
+								<img class="lodging-image" src="images/hebergements/hotel-du-port.webp" alt="Hôtel du port à Marseille" />
 								<figcaption>
 									<h3>Hôtel du port</h3>
 									<p class="price">Nuit à partir de 52<b>€</b></p>
@@ -196,11 +136,7 @@
 						</a>
 						<a href="#">
 							<figure class="lodging">
-								<img
-									class="lodging-image"
-									src="images/hebergements/4_small/hotel-les-mouettes.jpg"
-									alt="Hôtel Les mouettes à Marseille"
-								/>
+								<img class="lodging-image" src="images/hebergements/hotel-les-mouettes.webp" alt="Hôtel Les mouettes à Marseille" />
 								<figcaption>
 									<h3>Hôtel Les mouettes</h3>
 									<p class="price">Nuit à partir de 76<b>€</b></p>
@@ -216,11 +152,7 @@
 						</a>
 						<a href="#">
 							<figure class="lodging">
-								<img
-									class="lodging-image"
-									src="images/hebergements/4_small/hotel-de-la-mer.jpg"
-									alt="Hôtel de la mer à Marseille"
-								/>
+								<img class="lodging-image" src="images/hebergements/hotel-de-la-mer.webp" alt="Hôtel de la mer à Marseille" />
 								<figcaption>
 									<h3>Hôtel de la mer</h3>
 									<p class="price">Nuit à partir de 46<b>€</b></p>
@@ -236,11 +168,7 @@
 						</a>
 						<a href="#">
 							<figure class="lodging">
-								<img
-									class="lodging-image"
-									src="images/hebergements/4_small/auberge-le-panier.jpg"
-									alt="Auberge Le Panier à Marseille"
-								/>
+								<img class="lodging-image" src="images/hebergements/auberge-le-panier.webp" alt="Auberge Le Panier à Marseille" />
 								<figcaption>
 									<h3>Auberge Le Panier</h3>
 									<p class="price">
@@ -258,11 +186,7 @@
 						</a>
 						<a href="#">
 							<figure class="lodging">
-								<img
-									class="lodging-image"
-									src="images/hebergements/4_small/hotel-chez-amina.jpg"
-									alt="Hôtel chez Amina à Marseille"
-								/>
+								<img class="lodging-image" src="images/hebergements/hotel-chez-amina.webp" alt="Hôtel chez Amina à Marseille" />
 								<figcaption>
 									<h3>Hôtel chez Amina</h3>
 									<p class="price">Nuit à partir de 96<b>€</b></p>
@@ -288,11 +212,7 @@
 					<div class="popular-list">
 						<a href="#">
 							<figure class="popular">
-								<img
-									class="popular-image"
-									src="images/hebergements/4_small/hotel-le-soleil-du-matin.jpg"
-									alt="Hôtel Le soleil du matin à Marseille"
-								/>
+								<img class="popular-image" src="images/hebergements/hotel-le-soleil-du-matin.webp" alt="Hôtel Le soleil du matin à Marseille" />
 								<figcaption>
 									<h3>Hôtel Le soleil du matin</h3>
 									<p class="price">Nuit à partir de 128<b>€</b></p>
@@ -308,11 +228,7 @@
 						</a>
 						<a href="#">
 							<figure class="popular">
-								<img
-									class="popular-image"
-									src="images/hebergements/4_small/au-coeur-de-l-eau.jpg"
-									alt="Chambre d'hôtes Au coeur de l'eau à Marseille"
-								/>
+								<img class="popular-image" src="images/hebergements/au-coeur-de-l-eau.webp" alt="Chambre d'hôtes Au coeur de l'eau à Marseille" />
 								<figcaption>
 									<h3>Au coeur de l'eau Chambres d'hôtes</h3>
 									<p class="price">Nuit à partir de 71<b>€</b></p>
@@ -328,11 +244,7 @@
 						</a>
 						<a href="#">
 							<figure class="popular">
-								<img
-									class="popular-image"
-									src="images/hebergements/4_small/hotel-tout-bleu-et-blanc.jpg"
-									alt="Hôtel Tout bleu et Blanc à Marseille"
-								/>
+								<img class="popular-image" src="images/hebergements/hotel-tout-bleu-et-blanc.webp" alt="Hôtel Tout bleu et Blanc à Marseille" />
 								<figcaption>
 									<h3>Hôtel Tout bleu et Blanc</h3>
 									<p class="price">Nuit à partir de 68<b>€</b></p>
@@ -355,10 +267,7 @@
 				<div class="activities-list">
 					<a href="#">
 						<figure class="activity">
-							<img
-								src="images/activites/4_small/vieux-port.jpg"
-								alt="Vieux Port"
-							/>
+							<img src="images/activites/vieux-port.webp" alt="Vieux Port" />
 							<figcaption>
 								<h3>Vieux Port</h3>
 							</figcaption>
@@ -366,10 +275,7 @@
 					</a>
 					<a href="#">
 						<figure class="activity">
-							<img
-								src="images/activites/4_small/fort-de-pomegues.jpg"
-								alt="Fort de Pomègues"
-							/>
+							<img src="images/activites/fort-de-pomegues.webp" alt="Fort de Pomègues" />
 							<figcaption>
 								<h3>Fort de Pomègues</h3>
 							</figcaption>
@@ -377,10 +283,7 @@
 					</a>
 					<a href="#">
 						<figure class="activity">
-							<img
-								src="images/activites/4_small/iles-du-frioul.jpg"
-								alt="Îles du Frioul"
-							/>
+							<img src="images/activites/iles-du-frioul.webp" alt="Îles du Frioul" />
 							<figcaption>
 								<h3>Îles du Frioul</h3>
 							</figcaption>
@@ -388,10 +291,7 @@
 					</a>
 					<a href="#">
 						<figure class="activity">
-							<img
-								src="images/activites/4_small/parc-national-des-calanques.jpg"
-								alt="Parc National des Calanques"
-							/>
+							<img src="images/activites/parc-national-des-calanques.webp" alt="Parc National des Calanques" />
 							<figcaption>
 								<h3>Parc National des Calanques</h3>
 							</figcaption>
@@ -399,10 +299,7 @@
 					</a>
 					<a href="#">
 						<figure class="activity">
-							<img
-								src="images/activites/4_small/notre-dame-de-la-garde.jpg"
-								alt="Notre-Dame-de-la-Garde"
-							/>
+							<img src="images/activites/notre-dame-de-la-garde.webp" alt="Notre-Dame-de-la-Garde" />
 							<figcaption>
 								<h3>Notre-Dame-de-la-Garde</h3>
 							</figcaption>
@@ -410,10 +307,7 @@
 					</a>
 					<a href="#">
 						<figure class="activity">
-							<img
-								src="images/activites/4_small/parc-longchamp.jpg"
-								alt="Parc Longchamp"
-							/>
+							<img src="images/activites/parc-longchamp.webp" alt="Parc Longchamp" />
 							<figcaption>
 								<h3>Parc Longchamp</h3>
 							</figcaption>
