On rend le code un peu + joli et on rename les css pour mobile

--- a/index.html
+++ b/index.html
@@ -4,27 +4,18 @@
 		<!-- En-tête de la page -->
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<meta
-			name="description"
-			content="Vous souhaitez passer des vacances inoubliables, mais vous avez du mal à trouver un hébergement ? Avec Booki, simplifiez-vous la vie ! Profitez de notre moteur de recherche et trouvez le logement qui vous correspond, partout en France."
-		/>
+		<meta name="description" content="Vous souhaitez passer des vacances inoubliables, mais vous avez du mal à trouver un hébergement ? Avec Booki, simplifiez-vous la vie ! Profitez de notre moteur de recherche et trouvez le logement qui vous correspond, partout en France." />
 		<link rel="stylesheet" href="css/normalize.css" />
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway&display=swap" />
-		<link
-			rel="stylesheet"
-			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
-			integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
-			crossorigin="anonymous"
-			referrerpolicy="no-referrer"
-		/>
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 		<!-- 1200px et plus -->
 		<link rel="stylesheet" href="css/style.css" />
 		<!-- 320px à 479px -->
-		<link rel="stylesheet" media="screen and (min-width: 320px) and (max-width: 479px)" href="css/smartphone-small.css" />
+		<link rel="stylesheet" media="screen and (min-width: 320px) and (max-width: 479px)" href="css/mobile-small.css" />
 		<!-- 480px à 577px -->
-		<link rel="stylesheet" media="screen and (min-width: 480px) and (max-width: 577px)" href="css/smartphone-medium.css" />
+		<link rel="stylesheet" media="screen and (min-width: 480px) and (max-width: 577px)" href="css/mobile-medium.css" />
 		<!-- 578px à 767px -->
-		<link rel="stylesheet" media="screen and (min-width: 578px) and (max-width: 767px)" href="css/smartphone-large.css" />
+		<link rel="stylesheet" media="screen and (min-width: 578px) and (max-width: 767px)" href="css/mobile-large.css" />
 		<!-- 768px à 899px -->
 		<link rel="stylesheet" media="screen and (min-width: 768px) and (max-width: 899px)" href="css/tablet-small.css" />
 		<!-- 900px à 991px -->
