--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta name="description" content="Vous souhaitez passer des vacances inoubliables, mais vous avez du mal à trouver un hébergement ? Avec Booki, simplifiez-vous la vie ! Profitez de notre moteur de recherche et trouvez le logement qui vous correspond, partout en France." />
 		<link rel="stylesheet" href="css/normalize.css" />
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway&display=swap" />
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 		<!-- 1200px et plus -->
@@ -22,8 +24,6 @@
 		<link rel="stylesheet" media="screen and (min-width: 480px) and (max-width: 577px)" href="css/mobile-medium.css" />
 		<!-- 320px à 479px -->
 		<link rel="stylesheet" media="screen and (min-width: 320px) and (max-width: 479px)" href="css/mobile-small.css" />
-		
-		
 		<title>Booki</title>
 		<!-- Twitter Card -->
 		<meta name="twitter:card" content="summary_large_image" />
